# beacontrail

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release-esp-idf.yml
adapters/esp-idf/: Cargo.toml  README.md
adapters/esp-idf/src/: ble.rs  lib.rs  native_ble.rs
crates/beacontrail/: Cargo.toml
crates/beacontrail/src/: dll.rs  lib.rs
crates/beacontrail/src/events/: sys.rs
crates/beacontrail/src/wlan/: mod.rs  sys.rs
crates/radiochron/: Cargo.toml  README.md
crates/radiochron/src/: dll.rs  lib.rs
crates/radiochron/src/chronicle/: detect.rs  jsonl.rs  mod.rs  recorder.rs
crates/radiochron/src/events/: sys.rs
crates/radiochron/src/wlan/: mod.rs  sys.rs
site/: electron.html  index.html  license.html  privacy.html
src/: connectivity.rs  lib.rs  main.rs  mcp.rs  report.rs
src/ble/: findings.rs  fingerprint.rs  mod.rs  model.rs  tests.rs  tracker.rs
src/chronicle/: detect.rs  mod.rs  recorder.rs
src/embedded/: chronicle.rs
src/embedded/chronicle/: ble.rs  tests.rs  types.rs
src/events/: mod.rs  xml.rs
src/wlan/: bss.rs  mod.rs  sys.rs
src/wlan/analyze/: tests.rs
src/wlan/bss/: tests.rs
src/wlan/linux/: mod.rs  netlink.rs
