# RadioChron is two crates, not one, because they have different audiences.
#
#   radiochron      — the library. Collectors and 802.11 analysis. What an IoT
#                      agent, a CLI, an exporter or a WASM analyser imports.
#   radiochron-mcp  — the Model Context Protocol server built on it. A product,
#                      not a library.
#
# They live in one repository on purpose: the server is a thin shell over the
# library and the two move together, so separate repos would only buy manual
# version coordination on every release.

[workspace]
resolver = "2"
members = ["crates/radiochron", "crates/radiochron-mcp"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.78"
authors = ["Sergii Ziborov"]
license = "MIT"
repository = "https://github.com/sergii-ziborov/radiochron"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
lto = "thin"
strip = true
