[package]
name = "beacontrail"
description = "Wi-Fi diagnostics library: native WLAN collectors and 802.11 beacon analysis. No shell-outs, no runtime code generation, and no build toolchain beyond rustup."
keywords = ["wifi", "wlan", "802-11", "diagnostics", "network"]
categories = ["network-programming", "os::windows-apis"]
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# No binding crate on purpose. The seven wlanapi.dll and four wevtapi.dll entry
# points we need are declared by hand in the platform modules and the DLLs are
# resolved at run time, because the `windows` crate drags in
# windows-link/raw-dylib — which needs mingw's dlltool on the gnu target or the
# multi-gigabyte Visual C++ build tools plus the Windows SDK on msvc.

[features]
default = ["status", "scan", "analyze", "sample", "history"]

# Capabilities are separately selectable because an embedded target should not
# compile what it will never call. A sensor that only needs to know whether it
# is associated and how strong the link is takes `status` and nothing else.
#
#   beacontrail = { version = "0.2", default-features = false, features = ["status"] }

# Current association: interface enumeration and connection attributes.
status = []
# Nearby BSS list with raw 802.11 information-element parsing. Needs the
# interface enumeration and handle management that `status` provides.
scan = ["status"]
# The findings engine. Reads BSS entries and the current connection.
analyze = ["scan"]
# Connection dynamics sampled over a window.
sample = ["status"]
# Connection history from the Windows WLAN AutoConfig event log. Independent of
# the radio collectors — it reads a log, not a device — and has no counterpart
# on Linux or macOS, so it is optional rather than assumed.
history = []
